added contact section

--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
           </div>
         </div>
       </section>
-      <!------------- Clients Questions section -->
+      <!------------- Clients Questions section -------->
 
       <section>
         <div class="text-center space-y-4 my-16">
@@ -569,6 +569,86 @@
           </div>
         </div>
       </section>
+      <!-------------Contact Section --------------->
+      <div class="text-center mt-14 mb-10">
+        <h4 class="text-4xl font-extrabold">Get In Touch</h4>
+        <p>
+          Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis
+          placerat <br />
+          dolor. Purus urna in sit nullam proin.
+        </p>
+      </div>
+      <hr />
+      <div class="flex justify-between">
+        <div class="">
+          <div class="bg-[#BCED6E19] h-[200px] mb-4 mt-5">
+            <img src="Images/Group 1171275317.png" alt="" />
+            <p>Phone Number : (+62) 123-321-543</p>
+          </div>
+          <div class="bg-[#FDDF5F1A] h-[200px]">
+            <img src="Images/Group 1171275318.png" alt="" />
+            <p>Email : hockeys@support.com</p>
+          </div>
+          <div class="bg-[#629CF31A] h-[200px] mt-4">
+            <img src="Images/Group 1171275321.png" alt="" />
+            <p>Location : 152/1 Mohakhali Wireless Gate</p>
+          </div>
+        </div>
+        <div class="space-y-14">
+          <div class="flex gap-4">
+            <label class="form-control w-full max-w-xs">
+              <div class="label">
+                <span class="label-text">Your Name</span>
+              </div>
+              <input
+                type="text"
+                placeholder="Enter your full name"
+                class="input input-bordered w-full max-w-xs"
+              /> </label
+            ><label class="form-control w-full max-w-xs">
+              <div class="label">
+                <span class="label-text">Your Email</span>
+              </div>
+              <input
+                type="text"
+                placeholder="Enter your email"
+                class="input input-bordered w-full max-w-xs"
+              />
+            </label>
+          </div>
+          <div class="flex gap-4">
+            <label class="form-control w-full max-w-xs">
+              <div class="label">
+                <span class="label-text">Subject</span>
+              </div>
+              <input
+                type="text"
+                placeholder="Enter your subject"
+                class="input input-bordered w-full max-w-xs"
+              /> </label
+            ><label class="form-control w-full max-w-xs">
+              <div class="label">
+                <span class="label-text">Phone Number</span>
+              </div>
+              <input
+                type="text"
+                placeholder="Enter your phone number"
+                class="input input-bordered w-full max-w-xs"
+              />
+            </label>
+          </div>
+          <label class="form-control">
+            <div class="label">
+              <span class="label-text">Message</span>
+            </div>
+            <textarea
+              class="textarea textarea-bordered h-24"
+              placeholder="Write your message"
+            ></textarea>
+          </label>
+          <button class="btn btn-error text-white mt-3">Send Message</button>
+        </div>
+      </div>
     </main>
     <footer class="footer p-10 bg-black mt-10 mx-0 text-white">
       <div class="sm:pl-44 md:pl-0">
