--- a/index.html
+++ b/index.html
@@ -123,12 +123,23 @@
               <a href="#slide1" class="btn btn-circle">❯</a>
             </div>
           </div>
+          <div
+            class="absolute p-9 bg-black rounded-xl text-white h-[165px] w-[566px] lg:left-[52%] lg:top-[90%] sm:top-[80%] sm:left-14"
+          >
+            <h4 class="text-3xl font-extrabold">
+              Meet all the heroes from the field
+            </h4>
+            <p>
+              Dit amet consectetur. Condimentum dignissim adipiscing aliquam
+              turpis placerat dolor. Purus urna in sit nullam proin.
+            </p>
+          </div>
         </div>
       </section>
     </header>
     <main class="container mx-auto">
       <!----------- Radial progress section -------->
-      <section class="text-center">
+      <section class="text-center sm:mt-48">
         <h3 class="text-3xl font-extrabold text-[#131318]">
           Professional Hockeys Club
         </h3>
@@ -579,76 +590,142 @@
         </p>
       </div>
       <hr />
-      <div class="flex justify-between">
-        <div class="">
-          <div class="bg-[#BCED6E19] h-[200px] mb-4 mt-5">
+      <div class="flex justify-between md:flex-row sm:flex-col sm:items-center">
+        <div class="h-[700px] w-[470px] border-2 p-9 border-[#1313181A] mt-20">
+          <div class="bg-[#BCED6E19] h-[200px] mb-4 rounded-2xl pt-6 pl-6">
             <img src="Images/Group 1171275317.png" alt="" />
-            <p>Phone Number : (+62) 123-321-543</p>
+            <p>
+              Phone Number : <br />
+              <span class="font-bold">(+62) 123-321-543</span>
+            </p>
           </div>
-          <div class="bg-[#FDDF5F1A] h-[200px]">
+          <div class="bg-[#FDDF5F1A] h-[200px] rounded-2xl pt-6 pl-6">
             <img src="Images/Group 1171275318.png" alt="" />
-            <p>Email : hockeys@support.com</p>
+            <p>Email :</p>
+            <p class="font-bold">hockeys@support.com</p>
           </div>
-          <div class="bg-[#629CF31A] h-[200px] mt-4">
+          <div class="bg-[#629CF31A] h-[200px] mt-4 rounded-2xl pt-6 pl-6">
             <img src="Images/Group 1171275321.png" alt="" />
-            <p>Location : 152/1 Mohakhali Wireless Gate</p>
+            <p>Location :</p>
+            <p class="font-bold">152/1 Mohakhali</p>
           </div>
         </div>
-        <div class="space-y-14">
-          <div class="flex gap-4">
-            <label class="form-control w-full max-w-xs">
+        <div
+          class="space-y-8 mt-16 md:h-[700px] sm:items-center md:items-start"
+        >
+          <div class="flex gap-4 md:flex-row sm:flex-col">
+            <label class="form-control lg:w-[300px] sm:[600px] max-w-xs">
               <div class="label">
-                <span class="label-text">Your Name</span>
+                <span class="label-text text-xl font-bold">Your Name</span>
               </div>
               <input
                 type="text"
                 placeholder="Enter your full name"
-                class="input input-bordered w-full max-w-xs"
-              /> </label
-            ><label class="form-control w-full max-w-xs">
+                class="input input-bordered w-[300px] max-w-xs"
+              />
+            </label>
+            <label class="form-control w-full max-w-xs">
               <div class="label">
-                <span class="label-text">Your Email</span>
+                <span class="label-text text-xl font-bold">Your Email</span>
               </div>
               <input
                 type="text"
                 placeholder="Enter your email"
-                class="input input-bordered w-full max-w-xs"
+                class="input input-bordered w-[300px] max-w-xs"
               />
             </label>
           </div>
-          <div class="flex gap-4">
+          <div class="flex gap-4 md:flex-row sm:flex-col">
             <label class="form-control w-full max-w-xs">
               <div class="label">
-                <span class="label-text">Subject</span>
+                <span class="label-text text-xl font-bold">Subject</span>
               </div>
               <input
                 type="text"
                 placeholder="Enter your subject"
-                class="input input-bordered w-full max-w-xs"
+                class="input input-bordered w-[300px] max-w-xs"
               /> </label
             ><label class="form-control w-full max-w-xs">
               <div class="label">
-                <span class="label-text">Phone Number</span>
+                <span class="label-text text-xl font-bold">Phone Number</span>
               </div>
               <input
                 type="text"
                 placeholder="Enter your phone number"
-                class="input input-bordered w-full max-w-xs"
+                class="input input-bordered w-[300px] max-w-xs"
               />
             </label>
           </div>
           <label class="form-control">
             <div class="label">
-              <span class="label-text">Message</span>
+              <span class="label-text font-bold md:pb-4 text-xl sm:pb-1"
+                >Message</span
+              >
             </div>
             <textarea
-              class="textarea textarea-bordered h-24"
+              class="textarea textarea-bordered md:h-[350px] sm:h-[180px]"
               placeholder="Write your message"
             ></textarea>
           </label>
-          <button class="btn btn-error text-white mt-3">Send Message</button>
+          <button class="btn bg-red-500 text-white w-[610px]">
+            Send Message
+          </button>
         </div>
       </div>
+
+      <!--------------- Social Media Section ----------->
+      <section>
+        <div
+          class="footer footer-center p-10 bg-base-200 text-base-content rounded-xl mt-20"
+        >
+          <nav class="grid grid-flow-col gap-4">
+            <a class="link link-hover text-2xl font-extrabold">Social Media</a>
+          </nav>
+          <nav>
+            <div class="grid grid-flow-col gap-4">
+              <a
+                ><svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  class="fill-current"
+                >
+                  <path
+                    d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z"
+                  ></path>
+                </svg>
+              </a>
+              <a
+                ><svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  class="fill-current"
+                >
+                  <path
+                    d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"
+                  ></path>
+                </svg>
+              </a>
+              <a
+                ><svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  class="fill-current"
+                >
+                  <path
+                    d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z"
+                  ></path>
+                </svg>
+              </a>
+            </div>
+          </nav>
+        </div>
+      </section>
     </main>
     <footer class="footer p-10 bg-black mt-10 mx-0 text-white">
       <div class="sm:pl-44 md:pl-0">
