--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                   nunc morbi nulla. Tortor congue sed et in.
                 </p>
                 <button
-                  class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded"
+                  class="bg-red-500 hover:bg-red-300 text-white font-bold py-2 px-4 rounded"
                 >
                   Register Now!
                 </button>
@@ -263,7 +263,7 @@
                   nunc morbi nulla. Tortor congue sed et in.
                 </p>
                 <button
-                  class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded"
+                  class="bg-red-500 hover:bg-red-300 text-white font-bold py-2 px-4 rounded"
                 >
                   Register Now!
                 </button>
