changed the lorem text and the website beautiful

--- a/index.html
+++ b/index.html
@@ -234,11 +234,8 @@
                   Junior Program
                 </h1>
                 <p class="text-white font-medium pb-4">
-                  Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
-                  elit <br />
-                  enim sagittis turpis in magna. Id et sed euismod natoque amet
-                  <br />
-                  nunc morbi nulla. Tortor congue sed et in.
+                  Embark on an exciting journey of learning and <br />discovery
+                  with our Junior Program! Tailored for young minds,
                 </p>
                 <button
                   class="bg-red-500 hover:bg-red-300 text-white font-bold py-2 px-4 rounded"
@@ -256,11 +253,10 @@
                   Teenager Program
                 </h1>
                 <p class="text-white font-medium pb-4">
-                  Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
-                  elit <br />
-                  enim sagittis turpis in magna. Id et sed euismod natoque amet
+                  Ignite your passion and dive deep into the world of Hockey
                   <br />
-                  nunc morbi nulla. Tortor congue sed et in.
+                  training with our Teenager Program! Designed for <br />
+                  adolescents seeking to expand their knowledge and skills
                 </p>
                 <button
                   class="bg-red-500 hover:bg-red-300 text-white font-bold py-2 px-4 rounded"
@@ -277,14 +273,13 @@
                   Professional Program
                 </h1>
                 <p class="text-white font-medium pb-4">
-                  Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
-                  elit <br />
-                  enim sagittis turpis in magna. Id et sed euismod natoque amet
-                  <br />
-                  nunc morbi nulla. Tortor congue sed et in.
+                  Elevate your expertise and advance your<br />
+                  career with our Professional Program. Tailored for
+                  individuals<br />
+                  seeking to deepen their understanding.
                 </p>
                 <button
-                  class="bg-[#FF4240] hover:bg-black text-white font-bold py-2 px-4 rounded"
+                  class="bg-[#FF4240] hover:bg-red-300 text-white font-bold py-2 px-4 rounded"
                 >
                   Register Now!
                 </button>
@@ -296,12 +291,11 @@
       </section>
       <!--------------Product section  ------------->
       <section>
-        <div class="text-center space-y-5">
+        <div class="text-center mb-6 space-y-5">
           <h4 class="text-4xl font-extrabold">Our New Products</h4>
-          <p>
-            Dit amet consectetur. Condimentum dignissim adipiscing aliquam
-            turpis placerat <br />
-            dolor. Purus urna in sit nullam proin.
+          <p class="space-y-4">
+            Get ready to take your game to the next level with <br />
+            our top-of-the-line sports products.
           </p>
         </div>
 
@@ -325,8 +319,8 @@
                 </div>
                 <h2 class="card-title">World Cup Flags Football</h2>
                 <p>
-                  Dolor sit amet consectetur. Ut urna diam <br />
-                  quis sagittis.
+                  Don't forget to check out this popular sports <br />
+                  equipment, buy here
                 </p>
                 <p class="flex gap-2">
                   <span class="text-red-600 font-extrabold"
@@ -356,8 +350,8 @@
                 </div>
                 <h2 class="card-title">World Cup Flags Football</h2>
                 <p>
-                  Dolor sit amet consectetur. Ut urna diam <br />
-                  quis sagittis.
+                  Don't forget to check out this popular sports <br />
+                  equipment, buy here
                 </p>
                 <p class="flex gap-2">
                   <span class="text-red-600 font-extrabold"
@@ -387,8 +381,8 @@
                 </div>
                 <h2 class="card-title">World Cup Flags Football</h2>
                 <p>
-                  Dolor sit amet consectetur. Ut urna diam <br />
-                  quis sagittis.
+                  Don't forget to check out this popular sports <br />
+                  equipment, buy here
                 </p>
                 <p class="flex gap-2">
                   <span class="text-red-600 font-extrabold"
@@ -418,8 +412,8 @@
                 </div>
                 <h2 class="card-title">World Cup Flags Football</h2>
                 <p>
-                  Dolor sit amet consectetur. Ut urna diam <br />
-                  quis sagittis.
+                  Don't forget to check out this popular sports <br />
+                  equipment, buy here
                 </p>
                 <p class="flex gap-2">
                   <span class="text-red-600 font-extrabold"
@@ -449,8 +443,8 @@
                 </div>
                 <h2 class="card-title">World Cup Flags Football</h2>
                 <p>
-                  Dolor sit amet consectetur. Ut urna diam <br />
-                  quis sagittis.
+                  Don't forget to check out this popular sports <br />
+                  equipment, buy here
                 </p>
                 <p class="flex gap-2">
                   <span class="text-red-600 font-extrabold"
@@ -480,8 +474,8 @@
                 </div>
                 <h2 class="card-title">World Cup Flags Football</h2>
                 <p>
-                  Dolor sit amet consectetur. Ut urna diam <br />
-                  quis sagittis.
+                  Don't forget to check out this popular sports <br />
+                  equipment, buy here
                 </p>
                 <p class="flex gap-2">
                   <span class="text-red-600 font-extrabold"
@@ -582,11 +576,11 @@
       </section>
       <!-------------Contact Section --------------->
       <div class="text-center mt-14 mb-10">
-        <h4 class="text-4xl font-extrabold">Get In Touch</h4>
+        <h4 class="text-4xl font-extrabold pb-3">Get In Touch</h4>
         <p>
-          Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis
-          placerat <br />
-          dolor. Purus urna in sit nullam proin.
+          Have a specific inquiry? Fill out the form below, and we'll get back
+          to you <br />
+          as soon as possible.
         </p>
       </div>
       <hr />
@@ -621,7 +615,7 @@
               <input
                 type="text"
                 placeholder="Enter your full name"
-                class="input input-bordered w-[300px] max-w-xs"
+                class="input input-bordered w-[300px] max-w-xs bg-[#13131805]"
               />
             </label>
             <label class="form-control w-full max-w-xs">
@@ -631,7 +625,7 @@
               <input
                 type="text"
                 placeholder="Enter your email"
-                class="input input-bordered w-[300px] max-w-xs"
+                class="input input-bordered w-[300px] max-w-xs bg-[#13131805]"
               />
             </label>
           </div>
@@ -643,7 +637,7 @@
               <input
                 type="text"
                 placeholder="Enter your subject"
-                class="input input-bordered w-[300px] max-w-xs"
+                class="input input-bordered w-[300px] max-w-xs bg-[#13131805]"
               /> </label
             ><label class="form-control w-full max-w-xs">
               <div class="label">
@@ -652,7 +646,7 @@
               <input
                 type="text"
                 placeholder="Enter your phone number"
-                class="input input-bordered w-[300px] max-w-xs"
+                class="input input-bordered w-[300px] max-w-xs bg-[#13131805]"
               />
             </label>
           </div>
@@ -663,7 +657,7 @@
               >
             </div>
             <textarea
-              class="textarea textarea-bordered md:h-[350px] sm:h-[180px]"
+              class="textarea textarea-bordered bg-[#13131805] md:h-[350px] sm:h-[180px]"
               placeholder="Write your message"
             ></textarea>
           </label>
